WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119643
[Mac] some track language tags are not recognized
https://bugs.webkit.org/show_bug.cgi?id=119643
Summary
[Mac] some track language tags are not recognized
Eric Carlson
Reported
2013-08-09 15:48:04 PDT
If a movie's language code is stored as a QuickTime 5-bit packed code there aren't enough bits for a full RFC 4646 language tag. The AVFoundation API we use returns NULL in this case, so we have to try another to see if we can get the ISO 639-2/T language code.
Attachments
Proposed patch
(2.38 KB, patch)
2013-08-09 15:55 PDT
,
Eric Carlson
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Proposed patch
(21.63 KB, patch)
2013-08-23 13:10 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-08-09 15:48:38 PDT
<
rdar://problem/14701711
>
Eric Carlson
Comment 2
2013-08-09 15:55:44 PDT
Created
attachment 208462
[details]
Proposed patch
Dean Jackson
Comment 3
2013-08-09 15:57:05 PDT
Comment on
attachment 208462
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=208462&action=review
> Source/WebCore/ChangeLog:13 > + QuickTime langage code.
typo language
Eric Carlson
Comment 4
2013-08-09 16:09:26 PDT
Committed in
https://trac.webkit.org/r153912
.
Antti Koivisto
Comment 5
2013-08-11 08:48:24 PDT
Looks like this made a bunch of tests fail
https://bugs.webkit.org/show_bug.cgi?id=119661
Ryosuke Niwa
Comment 6
2013-08-11 22:25:33 PDT
This patch caused 26 tests to fail:
http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK1%20(Tests)/r153912%20(11876)/results.html
Aug 09 16:21 153912 failure #11876 Failed 28 failures 24 new passes 3 flakes Aug 09 16:08 153910 failure #11875 Failed 2 failures 25 new passes 5 flakes
Eric Carlson
Comment 7
2013-08-12 09:49:23 PDT
Reverted in
https://trac.webkit.org/r153945
.
Build Bot
Comment 8
2013-08-22 20:05:28 PDT
Comment on
attachment 208462
[details]
Proposed patch
Attachment 208462
[details]
did not pass win-ews (win): Output:
http://webkit-queues.appspot.com/results/1527454
Eric Carlson
Comment 9
2013-08-23 13:10:34 PDT
Created
attachment 209498
[details]
Proposed patch
Jer Noble
Comment 10
2013-08-23 14:37:03 PDT
Comment on
attachment 209498
[details]
Proposed patch r=me.
Eric Carlson
Comment 11
2013-08-23 15:47:27 PDT
Committed
r154527
-
https://trac.webkit.org/r154527
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug